# angel

./: =3.10.0  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-foundation/: 01-data-foundation-01-PLAN.md  01-data-foundation-01-SUMMARY.md  01-data-foundation-01-USER-SETUP.md  01-data-foundation-02-PLAN.md  01-data-foundation-02-SUMMARY.md  01-data-foundation-03-PLAN.md  01-data-foundation-03-SUMMARY.md  01-data-foundation-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: globals.css  layout.tsx
app/alerts/: page.tsx
app/api-docs/: page.tsx
app/backtesting/: page.tsx
app/dashboard/: page.tsx
app/heatmap/: page.tsx
app/signals/: page.tsx
components/: MapWrapper.tsx  Providers.tsx  RiskChart.tsx  SignalList.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Tooltip.tsx
lib/: api.ts
prisma/: schema.prisma
src/: config.py
src/adapters/: acled.py  base.py  gdelt.py  imf.py  registry.py  sipri.py  un_voting.py  unhcr.py  worldbank.py
src/api/: health.py
src/conflictpulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: models.py
src/ingestion/: health.py  orchestrator.py  retry.py
src/kafka/: client.py  topics.py
src/metrics/: __init__.py
src/schemas/: economic.py  event.py
