# ConflictPulse Backend Configuration
# pyproject.toml for Python backend dependencies

[project]
name = "conflictpulse"
version = "0.1.0"
description = "Real-time conflict prediction platform"
requires-python = ">=3.11"
dependencies = [
    # API Framework
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.32.0",
    
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    
    # Kafka
    "aiokafka>=0.12.0",
    
    # HTTP Clients
    "httpx>=0.28.0",
    
    # Retry Logic
    "tenacity>=9.0.0",
    
    # Monitoring
    "prometheus-client>=0.21.0",
    
    # Logging
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=25.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]